# ZeroDay-Detection-AutoEncoder-IDS

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  MODEL_IMPROVEMENTS.md  README.md  Report.docx  export_model.py  patch_checkpoint.py  pyproject.toml  requirements-dev.txt  requirements-smoke.txt  requirements.txt  train.py
.github/workflows/: dependency-audit.yml  smoke.yml
ai/: main.py
ai/config/: config.yaml
checkpoints/: ids_v14_pipeline.pkl
configs/: config_default.yaml
dashboard/: app.py  ui_safety.py  views_ai.py  views_analysis.py  views_batch.py  views_ood.py  views_queue.py  views_report.py  views_setup.py
data/: README.md
docs/: architecture.md  changelog.md  operations.md  project_audit.md  real_world_csv.md  report.txt  roadmap_real_world.md
elastic/: docker-compose.yml  setup_kibana.py
results/: artifact_manifest.json  ids_v14_results.json
scripts/: artifact_manifest.py  check_environment.py  demo.sh  drift_report.py  evaluate_baselines.py  evaluate_csv.py  install_requirements.ps1  prepare_production_flow_data.py  quality_check.ps1  regenerate_v14_report.py  run_dashboard.ps1  smoke_check.py  train.sh  train_v14.ps1  train_v15.ps1  train_v15.sh
src/: alert_store.py  artifact_validator.py  batch_evaluator.py  dashboard_runtime.py  explainer.py  ids_v14_unswnb15.py  ids_v15_unswnb15.py  inference_runtime.py  input_guard.py  llm_agent.py  log_normalizer.py  mitre_mapper.py  production_schema.py  serve.py  train.py
test/: docker-compose.yml
test-v2/: .env  docker-compose.yml
tests/: test_serve.py  test_smoke.py
(+56 files in other folders)
